; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavdevice/extr_dshow.c_dshow_list_device_options.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavdevice/extr_dshow.c_dshow_list_device_options.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.dshow_ctx* }
%struct.dshow_ctx = type { i32** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i32*, i32, i32)* @dshow_list_device_options to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dshow_list_device_options(%struct.TYPE_5__* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.dshow_ctx*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 0
  %16 = load %struct.dshow_ctx*, %struct.dshow_ctx** %15, align 8
  store %struct.dshow_ctx* %16, %struct.dshow_ctx** %10, align 8
  store i32* null, i32** %11, align 8
  store i8* null, i8** %12, align 8
  %17 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %8, align 4
  %20 = load i32, i32* %9, align 4
  %21 = call i32 @dshow_cycle_devices(%struct.TYPE_5__* %17, i32* %18, i32 %19, i32 %20, i32** %11, i8** %12)
  store i32 %21, i32* %13, align 4
  %22 = icmp slt i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %13, align 4
  store i32 %24, i32* %5, align 4
  br label %43

25:                                               ; preds = %4
  %26 = load i32*, i32** %11, align 8
  %27 = load %struct.dshow_ctx*, %struct.dshow_ctx** %10, align 8
  %28 = getelementptr inbounds %struct.dshow_ctx, %struct.dshow_ctx* %27, i32 0, i32 0
  %29 = load i32**, i32*** %28, align 8
  %30 = load i32, i32* %8, align 4
  %31 = zext i32 %30 to i64
  %32 = getelementptr inbounds i32*, i32** %29, i64 %31
  store i32* %26, i32** %32, align 8
  %33 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %34 = load i32, i32* %8, align 4
  %35 = load i32, i32* %9, align 4
  %36 = load i32*, i32** %11, align 8
  %37 = call i32 @dshow_cycle_pins(%struct.TYPE_5__* %33, i32 %34, i32 %35, i32* %36, i32* null)
  store i32 %37, i32* %13, align 4
  %38 = icmp slt i32 %37, 0
  br i1 %38, label %39, label %41

39:                                               ; preds = %25
  %40 = load i32, i32* %13, align 4
  store i32 %40, i32* %5, align 4
  br label %43

41:                                               ; preds = %25
  %42 = call i32 @av_freep(i8** %12)
  store i32 0, i32* %5, align 4
  br label %43

43:                                               ; preds = %41, %39, %23
  %44 = load i32, i32* %5, align 4
  ret i32 %44
}

declare dso_local i32 @dshow_cycle_devices(%struct.TYPE_5__*, i32*, i32, i32, i32**, i8**) #1

declare dso_local i32 @dshow_cycle_pins(%struct.TYPE_5__*, i32, i32, i32*, i32*) #1

declare dso_local i32 @av_freep(i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
